src/components/_opening.scss
@use "../styles/variables/colors" as c;
@use "../styles/variables/mixins" as m;
@use "../styles/variables/breakpoints" as b;
@use "../styles/variables/gradient" as g;

.opening {
  display: grid;
  align-items: start;
  min-height: 85dvh;
  padding-block: 50px 80px;

  .opening_container {
    display: grid;
    justify-content: center;

    .wrapper_title {
      position: relative;
      display: grid;
      grid-template-columns: minmax(0, auto) 3px;
      justify-items: end;
      gap: 8px;

      .hero-line {
        width: 2.5px;
        background: c.$color-gold-light;
      }

      .title_row {
        display: flex;
        align-items: flex-end;
        justify-content: space-between;
        gap: 5px;

        .icon {
          width: 33px;
        }

        .title_opening {
          font-size: 25px;
        }
      }

      .opening_content {
        display: flex;
        flex-direction: column;
        gap: 8px;
        grid-column: 1;

        text-align: right;

        .subtitle_opening {
          font-weight: 400;
          padding-bottom: 0;
          font-size: 15.5px;
          width: 100%;
        }

        .logo img {
          width: 120px;
        }
      }
    }
  }

  .image-bg {
    background: url(../assets/background/bestshop__hero_mobil.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    aspect-ratio: 4 / 3;
  }

  .hero_actions .btn {
    position: relative;

    @include m.button(0.6em 3.5em);
    background: white;
    border: none;
    text-transform: uppercase;
    width: 70%;
    margin: auto;
    @include m.gradient-text(g.$gradient-gold-flat);
    font-weight: 700;
    letter-spacing: 0.05em;

    &::before {
      content: "";
      position: absolute;

      inset: 0;
      padding: 3px;
      border-radius: inherit;
      background: g.$gradient-gold-button;

      -webkit-mask: linear-gradient(#fff 0 0) content-box,
        linear-gradient(#fff 0 0);

      -webkit-mask-composite: xor;
      mask-composite: exclude;

      pointer-events: none;
    }
  }
}

@media (min-width: b.$tabletBreakPoint) {
  .opening {
    justify-items: center;

    .opening_container {
      .wrapper_title {
        grid-template-columns: 1fr;
        justify-items: start;

        .hero-line {
          display: none;
        }

        .title_row {
          justify-content: start;
          gap: 11px;
        }

        .opening_content {
          flex-direction: row;
          align-items: flex-end;

          .subtitle_opening {
            padding-bottom: 3px;
          }
        }
      }
    }

    .image-bg {
      background: url(../assets/background/desktop_version.png) no-repeat
        center/contain;
      aspect-ratio: 7 / 3;
      width: min(100%, 1200px);
    }

    .row3 {
      grid-row: 2;
      margin: 0px auto;
      width: 40%;
    }

    .hero_actions .btn {
      @include m.button(0.6em 3.5em);
      width: 100%;
    }
  }
}

